--- a/config/custom.css
+++ b/config/custom.css
@@ -6,7 +6,7 @@
 }
 .chat-log {
 	font-size: 10pt;
-	background: rgb(229, 225, 247) url("http://oi57.tinypic.com/2qtii3q.jpg") no-repeat scroll right top;
+	background: rgb(229, 225, 247) url("http://i.imgur.com/El4xsJp.png") no-repeat scroll right top;
 	color: rgb(0, 0, 0);
 	overflow: auto;
 }
