Update league infobox styling

--- a/config/custom.css
+++ b/config/custom.css
@@ -99,3 +99,6 @@
 	background: url('http://hispano.xiaotai.org/welcome.png') center no-repeat;
 	background-color: #66669c;
 }
+.league-info {
+	background: #b4ff94 url('http://hispano.xiaotai.org/league.png') top right no-repeat;
+}
